# togetherpinz-ai-fastapi

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/endpoints/: ai.py
app/core/: config.py  database.py
app/models/: feedback.py  task_log.py
app/schemas/: ai.py
app/services/: ai_service.py
