[project]
name = "capstone-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "langchain>=1.1.0",
    "langchain-core>=1.1.0",
    "langchain-groq>=1.1.0",
    "uvicorn>=0.38.0",
    "sqlmodel>=0.0.16",
    "pydantic-settings>=2.2.1",
    "psycopg2-binary>=2.9.11",
]
